[package]
name = "yew-consent"
version = "0.2.0"
edition = "2021"

authors = ["Jens Reimann <jreimann@redhat.com>"]
license = "Apache-2.0"
description = "Managing consent with Yew"
repository = "https://github.com/ctron/yew-consent"
categories = ["wasm", "web-programming", "gui"]
keywords = ["yew", "consent", "web", "html"]
readme = "README.md"

[dependencies]
gloo-storage = "0.3"
serde = "1"
serde_json = "1"
yew = "0.21"

[dependencies.web-sys]
version = "0.3"
features = [
    "console"
]
